src/app/core/pages/main-page/main-page.component.scss
@import 'mixins/_all';
@import 'colors';
@import 'z-index';

@mixin vendor-background-cover {
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.border-y-orange {
  border-top: 1px solid $main-orange;
  border-bottom: 1px solid $main-orange;
}

.background-white {
  background-color: #fff;
}

.parallax {
  height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;
  perspective: 2px;
  @include e('block') {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
  }
}

.applied-parallax {
  &::after {
    content: '';
    position: absolute;
    top: 0; right: 0; bottom: 0; left: -15px;
    transform: translateZ(-1px) scale(1.5);
    background-size: 100%;
    z-index: -1;
    @include vendor-background-cover;
  }
}

.video {
  position: absolute; left: -10px;
  min-width: 100%; min-height: 100%;
  transform: translateZ(-3px) scale(2.5);
  z-index: -1;
}

.bg-placeholder {
  &::after { background-image: url('assets/img/main-bg.jpg'); }
}

.play-overlay {
  width: 100%; height: 100%;
  position: absolute;
  opacity: 0;
  transition: opacity .3s;
  background-color: $hover-black;
  z-index: 2;
  @include m('visible') { opacity: 1; }
}

.play-btn {
  width: 75px; height: 75px;
  position: absolute; bottom: 50px; right: 50px;
  border: 1px solid $main-orange;
  display: flex;
  justify-content: center;
  align-items: center;
  color: $main-orange;
  border-radius: 50%;
  box-shadow: 0 0 0 0 rgba(230, 85, 64, .5);
  animation: pulse 1.5s infinite;
  opacity: 0;
  transition: opacity .3s;
  cursor: pointer;
  &:hover { animation: none; }
  @include m('visible') { opacity: 1; }
  @include e('triangle') {
    font-size: 40px;
    transform: translateX(3px);
  }
}

@keyframes pulse {
  0% { transform: scale(.9); }
  70% { transform: scale(1); box-shadow: 0 0 0 50px rgba($main-orange, 0); }
  100% { transform: scale(.9); box-shadow: 0 0 0 0 rgba($main-orange, 0); }
}

.slogan-parallax {
  width: 100%; height: 100%;
  position: absolute; top: -50px; right: 0; bottom: 0; left: 0;
  transform: translateZ(-2px) scale(2.5);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  opacity: 0;
  transition: all 1s;
  color: #fff;
  z-index: 10;
  @include m('visible') { opacity: 1; top: 0; }
}

.collection {
  width: 100%; height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #fff;
  background: url('https://cdn-eu-ec.yottaa.net/5a8c2777312e587e9dba4f45/www.melanielyne.com/v~4b.1f/on/demandware.static/-/Sites/default/dw5763658b/melanie-lyne/2019/homepage/june-17/ml-trend-summer-dressing-1.jpg?yocs=D_&yoloc=eu') no-repeat center center;
  @include vendor-background-cover;
  @include e('name') {
    font-family: 'Playfair Display SC', serif;
    font-size: 30px;
    margin-bottom: 30px;
    text-transform: uppercase;
    text-align: center;
    opacity: 0;
    transform: translateY(-30px);
    transition: opacity 3s, transform 2s;
    @include m('visible') { opacity: 1; transform: translateY(0); }
    @include breakpoint-up(sm) { font-size: 35px; }
    @include breakpoint-up(md) { margin-bottom: 0; font-size: 50px; }
    @include breakpoint-up(lg) { margin-bottom: 0; font-size: 60px; }
  }
  @include e('slogan') {
    display: none;
    margin: 30px 0;
    font-size: 18px;
    text-align: center;
    font-family: Montserrat, sans-serif;
    opacity: 0;
    transition: opacity 3s;
    @include m('visible') { opacity: 1; }
    @include breakpoint-up(md) { display: block; }
  }
  @include e('btn') {
    width: 100%;
    max-width: 350px;
    padding: 10px;
    border: 2px solid #fff;
    font-size: 10px;
    letter-spacing: 8px;
    text-transform: uppercase;
    text-align: center;
    color: #fff;
    transition: all .3s;
    @include breakpoint-up(md) { font-size: 15px; }
    &:hover { background-color: #000; }
  }
}

.banner {
  width: 100%; height: 100%;
  background-image: url('assets/img/sale.png');
  background-size: 100%;
  background-position: center;
  background-repeat: no-repeat;
}

.pop-section {
  position: relative;
  @include e('image') {
    width: 100%;
    height: auto;
    transition: transform 1s, filter 1.5s ease-in-out;
    transform-origin: center center;
    filter: brightness(85%);
  }
  @include e('title') {
    width: 100%;
    position: absolute; top: 50%;
    letter-spacing: 10px;
    justify-content: center;
    transition: all 1s;
    color: #fff;
    transform: translateY(-50%);
    z-index: 1;
    cursor: pointer;
  }
  @include e('caption') {
    position: absolute; bottom: 5px; right: 30px;
    font-family: 'Homemade Apple';
    cursor: pointer;
  }
  &:hover {
    .pop-section__image { filter: brightness(100%); transform: scale(1.05); }
    .pop-section__title { color: $main-orange; transform: translateY(-50%) scale(1.1); }
  }
}

.main-bg-grey::after { background-image: url('assets/img/main-bg-grey.jpg'); }

.benefit {
  background-color: antiquewhite;
}

